# llm_nutrition_helper

./: .gitignore  README.md  foundation_foods.py  meal_name.py  pyproject.toml  streamlit_app.py
src/: common_ingredient_finder.py  foundation_food_parser.py  foundation_food_vector_store.py  main.py  meal_name_expander.py  streamlit_app.py
